Add the abstract class and interface and static